@@ -103,6 +103,8 @@ module Sequel
           index_definition_sql(table, op)
         when :drop_index
           "DROP INDEX #{default_index_name(table, op[:columns])}"
+        else
+          raise SequelError, "Unsupported ALTER TABLE operation"
         end
       end
     end
