@@ -1,5 +1,7 @@
 === SVN
 
+* Added ALTER TABLE specs for postgres, sqlite and mysql adapters. Added custom alter_table behavior for sqlite and mysql adapters (#101, #102).
+
 * Added direct Database API for altering tables.
 
 * Added Database#alter_table method with support for adding, dropping, renaming, modifying columns and adding and droppping indexes.
